--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,107 @@
-Flask==2.3.3
+absl-py==1.4.0
+asgiref==3.8.1
+astunparse==1.6.3
+attrs==23.1.0
+Automat==22.10.0
+beautifulsoup4==4.11.2
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+constantly==15.1.0
+contourpy==1.3.0
+cryptography==41.0.2
+cssselect==1.2.0
+cycler==0.12.1
+Django==5.1.1
+django-ajax==0.3.0
+filelock==3.12.2
+Flask==2.2.2
+Flask-AceEditor==1.0.7
+flatbuffers==23.3.3
+fonttools==4.54.1
+gast==0.4.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.0
+h5py==3.8.0
+hyperlink==21.0.0
+idna==3.4
+incremental==22.10.0
+itemadapter==0.8.0
+itemloaders==1.1.0
+itsdangerous==2.1.2
+jax==0.4.8
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.4.2
+keras==2.12.0
+kiwisolver==1.4.7
+libclang==16.0.0
+lxml==4.9.3
+Markdown==3.4.3
+MarkupSafe==2.1.1
+matplotlib==3.9.2
+ml-dtypes==0.1.0
+mpmath==1.2.1
+mysql-connector-python==8.0.32
+numpy==1.23.5
+oauthlib==3.2.2
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+packaging==23.0
+pandas==2.2.3
+parsel==1.8.1
+parso==0.8.3
+Pillow==9.4.0
+Protego==0.2.1
+protobuf==4.22.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyDispatcher==2.0.7
+pygame==2.3.0
+Pygments==2.15.1
+pyOpenSSL==23.2.0
+pyparsing==3.1.4
 pyshorteners==1.0.1
+pytesseract==0.3.10
+python-dateutil==2.9.0.post0
+pytz==2024.2
+queuelib==1.6.2
+requests==2.28.2
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.5.2
+scipy==1.10.0
+Scrapy==2.9.0
+service-identity==23.1.0
+six==1.16.0
+soupsieve==2.3.2.post1
+sqlparse==0.5.1
+sympy==1.11.1
+tensorboard==2.12.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+threadpoolctl==3.5.0
+tldextract==3.4.4
+Twisted==22.10.0
+twisted-iocpsupport==1.0.3
+typing_extensions==4.5.0
+tzdata==2024.1
+urllib3==1.26.14
+w3lib==2.1.1
+Werkzeug==2.2.2
+wrapt==1.14.1
+zope.interface==6.0
